Check point - metrics experiments
git-svn-id: file:///home/jls/openjml/repo_master/OpenJML/trunk@1136 1627bae4-3225-46cb-a19f-684862636fd9